--- a/src/app/bsx/theme/key-generation/key-list/key-list.component.html
+++ b/src/app/bsx/theme/key-generation/key-list/key-list.component.html
@@ -65,7 +65,7 @@ m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dro
 											</span>
 										</li>
 										<li class="m-nav__item">
-											<a href="javascript:;" class="m-nav__link" (click)="refresh(); getCreditData();">
+											<a href="javascript:;" class="m-nav__link" (click)="refresh();">
 												<i class="m-nav__link-icon flaticon-refresh"></i>
 												<span class="m-nav__link-text">
 													Odswież listę
@@ -74,7 +74,7 @@ m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dro
 										</li>
 										<li class="m-nav__item">
 											<a routerLink="//index/keygen/add" class="m-nav__link">
-												<i class="m-nav__link-icon flaticon-user-add"></i>
+												<i class="m-nav__link-icon la la-key"></i>
 												<span class="m-nav__link-text">
 													Generuj klucz
 												</span>
@@ -133,9 +133,7 @@ m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dro
 			<div class="col-xl-8 order-2 order-xl-1">
 			
 				<div  class="form-group m-form__group row align-items-center row">
-					
 					<div class="col-md-4" >
-
 					   <div class="form-group m-form__group">
 							<div class="m-form__label">
 								<label class="m-label m-label--single" >
@@ -152,10 +150,6 @@ m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dro
 							</div>
 						</div>
 						<div class="d-md-none m--margin-bottom-10"></div>
-
-
-
-						
 					</div>
 
 					
@@ -200,7 +194,7 @@ m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dro
 			<div class="col-xl-4 order-1 order-xl-2 m--align-right">
 				<a routerLink="//index/keygen/add" class="btn btn-accent m-btn m-btn--custom m-btn--icon m-btn--air">
 					<span>
-						<i class="flaticon flaticon-cogwheel"></i>
+						<i class="flaticon la la-key"></i>
 						<span>
 							Generuj nowy
 						</span>
