--- a/src/app/bsx/theme/templates/edit/templates-edit.component.html
+++ b/src/app/bsx/theme/templates/edit/templates-edit.component.html
@@ -10,6 +10,7 @@
 			<div class="m-portlet__head-caption">
 				<div class="m-portlet__head-title">
 					<h3 class="m-portlet__head-text">
+						<i  class="flaticon flaticon-edit-1"></i>
 						<span class="m--font-bolder" >Edytuj 
 							<span *ngIf="!fetched"> Szablon </span>
 							<span *ngIf="fetched"> {{model.templ.type.name}} </span>
