--- a/src/app/bsx/theme/templates/list/templates-list.component.html
+++ b/src/app/bsx/theme/templates/list/templates-list.component.html
@@ -13,6 +13,7 @@
 	<div class="m-portlet__head-caption">
 		<div class="m-portlet__head-title">
 			<h3 class="m-portlet__head-text bk">
+                <i class="m-menu__link-icon flaticon-interface-6"></i>
 				Twoje  szablony
 			</h3>
 		</div>
